--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/temp_arpo
+spring.datasource.url=jdbc:mysql://localhost:3306/arpo
 spring.datasource.username=root
-spring.datasource.password=lakshay@31
+spring.datasource.password=Akshan
