--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/arpo
+spring.datasource.url=jdbc:mysql://localhost:3306/arpodb
 spring.datasource.username=root
-spring.datasource.password=Akshan
+spring.datasource.password=Kk@913222001
