--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/arpodb
+spring.datasource.url=jdbc:mysql://localhost:3306/arpo
+server.port=1000
 spring.datasource.username=root
-spring.datasource.password=Kk@913222001
+spring.datasource.password=Akshan
