--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/arpo
+spring.datasource.url=jdbc:mysql://localhost:3306/temp_arpo
 server.port=1010
 spring.datasource.username=root
-spring.datasource.password=Akshan
+spring.datasource.password=lakshay@31
