--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/arpodb
+spring.datasource.url=jdbc:mysql://localhost:3306/arpo
 spring.datasource.username=root
-server.port=1010
-spring.datasource.password=Kk@913222001
+server.port=1000
+spring.datasource.password=Akshan
