--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/arpo
+spring.datasource.url=jdbc:mysql://localhost:3306/arpodb
 spring.datasource.username=root
 server.port=1000
-spring.datasource.password=Akshan
+spring.datasource.password=Kk@913222001
