--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/arpo
 spring.datasource.username=root
 server.port=8080
-spring.datasource.password=lakshay@31
+spring.datasource.password=Akshan
